# Pipecat

./: pyproject.toml
pipecat_project/: bot.py  bot_runner.py
